	that subclasses are registered and get their ancestry set up
	correctly (especially with respect to interfaces).  This enables
	us to stop jumping through hoops to handle
	pango_cairo_font_map_new and pango_cairo_font_map_get_default.

	* t/PangoCairo.t
	* xs/PangoCairo.xs: Wrap pango_cairo_font_map_new_for_font_type
	and pango_cairo_font_map_get_font_type.

2007-07-05	kaffeetisch

	* xs/GdkPixbuf.xs: Really plug the leaks in
	Gtk2::Gdk::Pixbuf::render_pixmap_and_mask() and
	render_pixmap_and_mask_for_colormap().

2007-07-02	kaffeetisch

	* Gtk2.pm
	* t/GtkBuilder.t
	* xs/GtkBuilder.xs: Make Gtk2::Builder::connect_signals default to
	the calling package (instead of main) if none was specified.

2007-06-27	muppetman

	* xs/GdkPixbuf.xs: Plug reference leaks on the pixmap and bitmap
	returned from Gtk2::Gdk::Pixbuf::render_pixmap_and_mask() and
	render_pixmap_and_mask_for_colormap().  Also add a couple of
	FIXMEs.

2007-06-27	muppetman

	* xs/GtkAboutDialog.xs: Hide the AboutDialog on any reponse.
	See http://svn.gnome.org/viewcvs/gtk%2B?revision=14919&view=revision
	which changed the behavior of the dialog in gtk+ between 2.8 and 2.10.

2007-06-25	kaffeetisch

	* t/GtkIconView.t
	* xs/GtkIconView.xs: Supply default values for scroll_to_path.
	Suggested by Jeffrey Ratcliffe.

	* exampels/cellrenderer_popup.pl: Slightly modified patch from
	Grant McLean makes sure the popup works properly when using simple
	clicks instead of click-and-hold.

2007-06-24	kaffeetisch

	* Gtk2.pm, MANIFEST, Makefile.PL, NEWS, README: Unstable release
	1.152.

2007-06-23	kaffeetisch

	* t/GtkMenuItem.t
	* xs/GtkMenuItem.xs: gtk_menu_item_set_submenu now accepts NULL
	for submenu.  Adjust the wrapper accordingly.

	* t/GtkTextBuffer.t
	* xs/GtkTextBuffer.xs: Wrap gtk_text_buffer_add_mark.

	* t/GtkTextMark.t
	* xs/GtkTextMark.xs: Wrap gtk_text_mark_new.

	* t/GtkTreeView.t
	* xs/GtkTreeViewColumn.xs
	* xs/GtkTreeView.xs: Wrap gtk_tree_view_column_get_tree_view,