@@ -18,6 +18,9 @@
 	* xs/PangoCairo.xs: Wrap pango_cairo_font_map_new_for_font_type
 	and pango_cairo_font_map_get_font_type.
 
+	* t/PangoFont.t
+	* xs/PangoFont.xs: Wrap pango_font_face_is_synthesized.
+
 2007-07-05	kaffeetisch
 
 	* xs/GdkPixbuf.xs: Really plug the leaks in
